<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/espaciado"
    android:paddingLeft="@dimen/espaciado"
    android:paddingRight="@dimen/espaciado"
    android:paddingTop="@dimen/espaciado"
    android:orientation="vertical"
    tools:context="mx.aedr2.tarea2.ConfirmarDatos">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/espaciado">

        <TextView
            android:id="@+id/tvTituloConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmacion"
            android:textSize="@dimen/tamanoLetraGrande"
            android:textAlignment="center"
            android:paddingBottom="@dimen/espaciado"
            />

        <TextView
            android:id="@+id/tvNombreConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanoLetra"
            android:paddingBottom="@dimen/espaciado"
            />

        <TextView
            android:id="@+id/tvFechaConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaConfirmacion"
            android:textSize="@dimen/tamanoLetra"
            android:paddingBottom="@dimen/espaciado"
            />

        <TextView
            android:id="@+id/tvTelefonoConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefonoConfirmacion"
            android:textSize="@dimen/tamanoLetra"
            android:paddingBottom="@dimen/espaciado"
            />
        <TextView
            android:id="@+id/tvEmailConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailConfirmacion"
            android:textSize="@dimen/tamanoLetra"
            android:paddingBottom="@dimen/espaciado"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espaciado"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvDescripcionConfirmacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcionConfirmacion"
                android:textSize="@dimen/tamanoLetra"
                />
            <TextView
                android:id="@+id/tvDescripcionConfirmacion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanoLetra"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/botonEditar"
        android:textColor="@color/primary_light" />
</RelativeLayout>
